[tool.poetry]
name = "test-actions"
description = ""
authors = []
version = "0.1.0"

[tool.poetry.dependencies]
# Core, development
python = "^3.8"
wheel = "^0.37.0"
mypy = "^0.790"
pytest = "^6.2.1"
flake8 = "^3.8.4"
mkdocs = "^1.2.2"
sphinx = "^4.2.0"
# Transport
asyncio-nats-client = "^0.11.4"
msgpack = "^1.0.2"
# Exif
exifread = "^2.3.2"
piexif = "^1.1.3"
# API server
uvicorn = {extras = ["standard"], version = "^0.13.3"}
fastapi = "^0.63.0"
python-multipart = "^0.0.5"
# Math and CV
numpy = "^1.19.5"
pillow = "^8.1.0"
opencv-python = "^4.5.1"
faiss-cpu = "^1.7.0"
sklearn = "^0.0"
torch = "1.7.1"
torchvision = "0.8.2"
yacs = "^0.1.8"
# SfM
#opensfm = {git = "https://github.com/mapillary/OpenSfM.git", rev = "7d18784"}
# Storage
minio = "^7.0.2"
pymongo = "^3.11.3"
motor = "^2.3.1"
aiofiles = "^0.6.0"
Jinja2 = "^3.0.1"
einops = "^0.3.2"
kornia = "^0.5.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
